# postlens

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
examples/: demo_dummy.py
examples/skills/: csv_stat.SKILL.md  grep_summarize.SKILL.md  regex_mask.SKILL.md  tool_arg_lookup.SKILL.md  unit_convert.SKILL.md
examples/tasks/: hello.md
src/postlens/: __init__.py  backbone.py  bench.py  cli.py  runtime.py  skill.py  state.py  stream.py
tests/: conftest.py  test_backbone.py  test_bench.py  test_cli.py  test_runtime.py  test_skill.py  test_smoke.py  test_state.py  test_stream.py
