[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "postlens"
dynamic = ["version"]
description = "Post-Transformer agent latency framework (RWKV-7 / Mamba-3 backbones for smolagents)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "hinanohart" }]
keywords = ["rwkv", "mamba", "agent", "latency", "smolagents", "ssm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "smolagents>=1.20",
  "transformers>=4.46",
  "huggingface-hub>=0.31",
  "torch>=2.4",
  "rich>=13.9",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
fla = ["flash-linear-attention>=0.2"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/hinanohart/postlens"
Issues = "https://github.com/hinanohart/postlens/issues"

[project.scripts]
postlens = "postlens.cli:main"

[tool.hatch.version]
path = "src/postlens/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/postlens"]

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["slow: marks tests that download HF models (deselect with '-m \"not slow\"')"]
